# tourism_data_lecture

Midterm/: Midterm_Q.py  midterm_answers.md  midterm_problems.md
Week2/: Week2_Q.py  Week2_과제.ipynb  Week2_수업자료.ipynb
Week2/.ipynb_checkpoints/: Week2_Q-checkpoint.py
Week3/: Week3_Q.py  Week3_과제.ipynb  Week3_수업자료.ipynb  Week3_예제_및_과제_정답.ipynb
Week4/: Week4_Q.py  Week4_과제.ipynb  Week4_수업자료.ipynb  Week4_예제_및_과제_정답.ipynb
Week5/: Week5_Q.py  Week5_과제.ipynb  Week5_수업자료.ipynb  Week5_예제_및_과제_정답.ipynb  jeju_data.csv
Week5/edu_success_demo/: README.md  from_use.py  pyproject.toml
Week5/edu_success_demo/src/edu_success_demo/: __init__.py  install.py  run.py
